Fix deck icon in dark mode

--- a/css/icons.scss
+++ b/css/icons.scss
@@ -4,6 +4,9 @@
 .icon-deck {
 	background-image: url('../img/deck-dark.svg');
 }
+body.dark .icon-deck {
+	background-image: url('../img/deck.svg');
+}
 
 .icon-help {
 	background-image: url('../../../settings/img/help.svg');
